--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,10 @@
 /vendor
 .env
 .env.backup
+.env.testing
 .phpunit.result.cache
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+.idea/
