--- a/.env.testing.example
+++ b/.env.testing.example
@@ -10,7 +10,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=db
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=laravel_testing
 DB_USERNAME=laraveluser
 DB_PASSWORD=your_laravel_db_password
 
